# universitys-homeworks

./: .gitignore  README.md
algorithms/: README.md  rato-toca-queijo.c
artificial-intelligence/: README.md  traveling_salesman.txt
compilers/: .gitignore  README.md
compilers/lexical-analyzer/: CMakeLists.txt  CodeReader.hpp  FileCodeReader.cpp  FileCodeReader.hpp  LexicalAnalyzer.cpp  LexicalAnalyzer.hpp  LexicalTable.cpp  LexicalTable.hpp  Token.cpp  Token.hpp  TokenCategory.hpp  main.cpp
compilers/lexical-analyzer/samples/: fibonacci.san  hello-world.san  shell-sort.san
compilers/specification/: language-specification-pt_BR.tex  language-tokens-specification-pt_BR.tex
computer-networks/: PushAnything.pro  README.md  Util.cpp  Util.hpp  announcer.cpp  announcer.hpp  discoverypeer.cpp  discoverypeer.hpp  filemessage.cpp  filemessage.hpp  main.cpp  maintestthread.cpp  maintestthread.hpp  message.hpp  peer.cpp  peer.hpp  peermodel.cpp  peermodel.hpp  pullanythingtcpsocket.cpp  pullanythingtcpsocket.hpp  pushanythingtcpsocket.cpp  pushanythingtcpsocket.hpp  textmessage.cpp  textmessage.hpp
data-structure/: .gitignore  README.md
distributed-systems/: README.ipynb  README.md  b-multicast-data.csv  b-multicast.r  r-multicast-data.csv  r-multicast.r
embedded-systems/: .gitignore  README.md
microcontrollers/: .gitignore  README.md
operational-system/: README.md  bochs-config.sh
p-embedded-systems/: .gitignore  README.md
robotics/: .gitignore  README.md
wireless-sensor-networks/: DataReductionWSN.qbs  README.md  data.qrc
(+215 files in other folders)
